<layout

    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


        <variable
            name="viewModel"
            type="com.ezyplanet.thousandhands.driver.ui.activity.changepasword.ChangePasswordVM" />

    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding">


    <EditText
        android:id="@+id/edtSetPassword"
        style="@style/edt_background_gray"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:hint="@string/set_password"
        android:inputType="textPassword"
        android:text="@={viewModel.oldPassword}"
        android:padding="@dimen/padding" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        style="@style/edt_background_gray"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:text="@={viewModel.confirmPassword}"
        android:padding="@dimen/padding" />


    <Button
        android:id="@+id/btnSave"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_top_large"
        android:layout_marginTop="@dimen/margin_top_large"
        android:onClick="@{()->viewModel.saveClick()}"
        android:text="@string/save" />


</LinearLayout>
</layout>
