<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ezyplanet.thousandhands.driver.ui.activity.login.password.PasswordVM" />

    </data>


    <RelativeLayout
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/app_129af0">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/bg_login" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/app_f2f2f2"
                android:gravity="bottom|center_horizontal"
                android:visibility="gone"
                >

                <TextView
                    android:id="@+id/tvSwitchAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:fontFamily=""
                    android:gravity="center_horizontal"
                    android:text="@string/switch_account"

                    custom:fontFamily="@font/roboto"
                    font:fontFamily="@font/roboto" />
            </LinearLayout>

        </LinearLayout>
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="left"
            android:src="@drawable/ic_close_white" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linLogin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            android:padding="@dimen/dp_35"
            android:src="@drawable/helper_logo_white"

            />

        <LinearLayout
            android:id="@+id/linLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:background="@drawable/bg_border_shadow"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_22"
                android:gravity="center_horizontal"
                android:text="@string/log_in"
                android:textColor="@color/dark_gray"
                android:fontFamily="@font/roboto_bold"
               />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_20">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="@dimen/dp_85"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/email"
                    font:fontFamily="@font/roboto"
                     />

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvEmail"
                    android:background="@drawable/bg_white"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true"
                    android:textColor="@color/app_444444"
                    android:fontFamily="@font/roboto"
                    android:textColorHint="@color/app_cecece" />

                <View
                    style="@style/divider_vertical"
                    android:layout_width="match_parent"
                    android:layout_below="@id/edtEmail" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_15">

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="@dimen/dp_85"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/password"
                    android:fontFamily="@font/roboto"
                     />

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvPassword"
                    android:background="@drawable/bg_white"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp_10"
                    android:textColor="@color/app_444444"
                    android:textColorHint="@color/app_cecece" />

                <View
                    style="@style/divider_vertical"
                    android:layout_width="match_parent"
                    android:layout_below="@id/edtPassword" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnSave"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_30"
                android:onClick="@{()->viewModel.serverLogin()}"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_50"
                android:layout_marginTop="@dimen/margin"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_gray"
                android:fontFamily="@font/roboto_bold"
                />
        </LinearLayout>


    </RelativeLayout>

</layout>