<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.text.Html"/>
        <variable
            name="viewModel"
            type="com.ezyplanet.thousandhands.driver.ui.activity.login.LoginVM" />

    </data>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_129bf1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_close_white" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:padding="@dimen/dp_30"
                android:src="@drawable/helper_logo_white_2" />


            <ProgressBar
                android:id="@+id/progress_bar_create_account"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateOnly="true"
                android:minHeight="10dp"

                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:visibility="invisible" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_light"
                android:gravity="center_horizontal"
                android:text="@string/sign_up_or_login_with"
                android:textColor="@color/white"
                app:fontFamily="@font/roboto_light" />


            <TextView
                android:id="@+id/signup_facebook_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@drawable/bg_rounded_white"
                android:drawableLeft="@drawable/ic_fb"
                android:drawablePadding="@dimen/dp_20"
                android:gravity="center_vertical"
                android:onClick="@{()->viewModel.facebookClick()}"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_25"
                android:paddingTop="@dimen/dp_10"
                android:text="@string/facebook"
                android:textAllCaps="true"
                android:textColor="@color/app_40a3c4"
                android:textSize="@dimen/text32pt"
                android:fontFamily="@font/roboto_bold"
                 />


            <TextView
                android:id="@+id/btLoginPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@drawable/bg_rounded_white"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawablePadding="@dimen/dp_20"
                android:gravity="center_vertical"
                android:onClick="@{()->viewModel.phoneClick()}"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_10"
                android:text="@string/mobile_number"
                android:textAllCaps="true"
                android:textColor="@color/app_40a3c4"
                android:textSize="@dimen/text32pt"
                android:fontFamily="@font/roboto_bold"
                 />


            <TextView
                android:id="@+id/tvLoginWithPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="30dp"
                android:layout_marginRight="@dimen/dp_20"
                android:gravity="center_horizontal|top"
                android:onClick="@{()->viewModel.passwordClick()}"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:fontFamily="@font/roboto_bold"
                android:Text="@{Html.fromHtml(@string/login_or_sign_up)}" />


        </LinearLayout>

</layout>

